--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,28 +1,6 @@
 <h1>Listing games</h1>
 
-<table>
-  <tr>
-    <th>Name</th>
-    <th>Open</th>
-    <th>Variables</th>
-    <th>Gm</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @games.each do |game| %>
-  <tr>
-    <td><%= game.name %></td>
-    <td><%= game.open %></td>
-    <td><%= game.variables %></td>
-    <td><%= game.gm %></td>
-    <td><%= link_to 'Show', game %></td>
-    <td><%= link_to 'Edit', edit_game_path(game) %></td>
-    <td><%= link_to 'Destroy', game, :confirm => 'Are you sure?', :method => :delete %></td>
-  </tr>
-<% end %>
-</table>
+<%= render @games %>
 
 <br />
 
