--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -20,8 +20,16 @@
     <%= f.check_box :open %>
   </div>
   <div class="field">
+    <%= f.label :hidden %><br />
+    <%= f.check_box :hidden %>
+  </div>
+  <div class="field">
     <%= f.label :variables %><br />
     <%= f.text_area :variables %>
+  </div>
+  <div class="field">
+    <%= f.label :system %><br />
+    <%= f.text_field :system %>
   </div>
   <div class="field">
     <%= f.label :gm %><br />
